src/index.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: Rubik, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

html, body {
	overflow: hidden;
	height: 100vh;
}

#root, .App {
	display: flex;
	flex-direction: column;
	min-height: 100%;
}

